--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "none"
+  "semi": true,
+  "singleQuote": false,
+  "arrowParens": "always",
+  "tabWidth": 2,
+  "printWidth": 80,
+  "trailingComma": "es5"
 }
