--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "basehub": "^3.0.4",
     "date-fns": "^3.5.0",
+    "geist": "^1.2.2",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
